crates/cli/src/commands/snapshots/cli__commands__status__tests__running_status_shows_active_ports_in_plain_output.snap
---
source: crates/cli/src/commands/status.rs
expression: "String::from_utf8(bytes)?"
---
PV status
Overall: ok
Daemon: running
  LaunchAgent: current
  Socket: healthy
Integrations:
  DNS: active
  Ports: active
    HTTP 80 -> 48080, HTTPS 443 -> 48443
  CA: trusted
Logs: /home/acme/.pv/logs
Managed Resources:
  none
Runtimes:
  gateway running -
Projects:
  acme.test env=warning APP_URL already exists outside the PV block
Recent errors:
  none
